Upload Layout Page Admin

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,7 @@
 // * tạo biến sử dụng những thuộc tính css chung
 :root {
     // --primary-color:...;
+    --default-layout-width: 1150px;
 }
 
 * {
