--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    height: 60px;
+    height: var(--default-header-height);
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
