--- a/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
+++ b/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
@@ -4,7 +4,7 @@
     --black: #000;
     --white: #fff;
     --primary-background-color-sidebar: #fff;
-    --second-background-color-sidebar: #04a2b7;
+    --second-background-color-sidebar: #00aeff;
     --primary-color-sidebar: #0ab5cb;
     // --second-color-sidebar: #04a2b7;
     --text-color: #161823;
