--- a/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
+++ b/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
@@ -4,9 +4,8 @@
     --black: #000;
     --white: #fff;
     --primary-background-color-sidebar: #fff;
-    --second-background-color-sidebar: #00aeff;
-    --primary-color-sidebar: #0ab5cb;
-    // --second-color-sidebar: #04a2b7;
+    --second-background-color-sidebar: #8ddbffc7;
+    --primary-color-sidebar: #00aeff;
     --text-color: #161823;
     --default-header-height: 60px;
     // --font-family: ...;
