--- a/src/pages/adminPage/components/Sidebar/Sidebar.module.scss
+++ b/src/pages/adminPage/components/Sidebar/Sidebar.module.scss
@@ -1,11 +1,20 @@
-.wrapper {
+@mixin defaultSidebarStyles {
     position: fixed;
     top: 0;
     left: 0;
     height: 100%;
-    width: 240px;
     color: var(--primary-color-sidebar);
     background-color: var(--primary-background-color-sidebar);
     padding: 6px 14px;
     transition: all 0.5s ease;
+}
+
+.wrapper {
+    @include defaultSidebarStyles;
+    width: 78px;
+}
+
+.active {
+    @include defaultSidebarStyles;
+    width: 240px;
 }
