--- a/src/pages/adminPage/components/Header/Header.module.scss
+++ b/src/pages/adminPage/components/Header/Header.module.scss
@@ -1,4 +1,23 @@
 .wrapper {
-    background-color: rgb(35, 182, 35);
     height: var(--default-header-height);
+    display: flex;
+}
+
+.logo-wrapper {
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.logo {
+    max-width: 40px;
+    height: 40px;
+}
+
+.info-wrapper {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
