--- a/src/pages/adminPage/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/pages/adminPage/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -8,7 +8,6 @@
     overflow: scroll;
     scroll-behavior: smooth;
     transition: all 0.5s ease;
-    background-color: pink;
 }
 
 .content {
@@ -16,8 +15,14 @@
     width: calc(100% - 78px);
     left: 78px;
 }
+
 .active {
     @include defaultLayoutStyle;
     width: calc(100% - 240px);
     left: 240px;
+}
+
+.body {
+    background-color: pink;
+    min-height: 1000px;
 }
