--- a/src/pages/adminPage/components/Header/Header.module.scss
+++ b/src/pages/adminPage/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
 .logo {
     max-width: 40px;
     height: 40px;
+    cursor: pointer;
 }
 
 .info-wrapper {
@@ -20,4 +21,26 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
+
+.icon {
+    color: var(--primary-color-sidebar);
+    line-height: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 2.2rem;
+}
+
+.title {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 0 12px;
+    cursor: default;
+    color: var(--text-color);
+}
+
+.iconDrop {
+    color: #9f9f9f;
+    margin-right: 12px;
 }
