Xong giao diện Dashboard Page

--- a/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
+++ b/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
@@ -5,11 +5,13 @@
     // --primary: #fe2c55;
     --black: #000;
     --white: #fff;
+    --gray: #9f9f9f;
+    --error: #fd0002;
+    --succes: #00fe16;
 
     --primary-background-color-sidebar: #fff;
     --second-background-color-sidebar: #8ddbffc7;
     --primary-color-sidebar: #00aeff;
-
     --background-color-content: #e7fbfc;
     --text-color: #161823;
     --default-header-height: 60px;
