--- a/src/pages/adminPage/pages/User/Info/Info.module.scss
+++ b/src/pages/adminPage/pages/User/Info/Info.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-    width: 100%;
     background-color: var(--white);
-    margin-top: 30px;
+    flex: 1;
     border-radius: 10px;
+    margin-left: 20px;
 }
