--- a/src/pages/adminPage/pages/Home/Header/Header.module.scss
+++ b/src/pages/adminPage/pages/Home/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     height: 130px;
 }
