--- a/src/pages/adminPage/pages/User/ListInfo/ListInfo.module.scss
+++ b/src/pages/adminPage/pages/User/ListInfo/ListInfo.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-    width: 100%;
     background-color: var(--white);
-    margin-top: 30px;
+    width: 75%;
+    padding: 16px 20px;
     border-radius: 10px;
 }
