--- a/src/pages/adminPage/pages/User/ListInfo/Header/Header.module.scss
+++ b/src/pages/adminPage/pages/User/ListInfo/Header/Header.module.scss
@@ -1,4 +1,7 @@
 .wrapper {
-    // background-color: #ddd;
     height: 60px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding-left: 16px;
+    padding-top: 16px;
 }
