--- a/src/pages/adminPage/pages/User/ListInfo/Body/GlobalTable/GlobalTable.module.scss
+++ b/src/pages/adminPage/pages/User/ListInfo/Body/GlobalTable/GlobalTable.module.scss
@@ -1,7 +1,22 @@
+@mixin handleText {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.container {
+    display: flex;
+    overflow: hidden;
+    background-color: var(--background-color-content);
+}
+
 .wrapper {
-    // margin-top: 20px;
+    table-layout: fixed;
+    background-color: var(--white);
     width: 100%;
-    padding: 6px 0px 16px 16px;
+    padding: 6px 16px 16px 16px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     text-align: left;
 }
 
@@ -13,9 +28,7 @@
 
 .tr,
 .even {
-    color: var(--text-color);
-    height: 40px;
-    font-size: 1.4rem;
+    height: 68px;
     cursor: pointer;
     &:hover {
         background-color: #00aeff;
@@ -35,39 +48,24 @@
 .th {
     font-weight: 600;
     font-size: 1.6rem;
-    padding-left: 8rem;
-    &:first-child {
-        padding-left: 0;
-    }
-    &:last-child {
-        padding-left: 4rem;
-    }
+    padding: 12px;
 }
 
 .tr td,
 .even td {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding-left: 8rem;
-    &:first-child {
-        padding-left: 0;
-    }
+    @include handleText;
+    padding-left: 8px;
     &:last-child {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        height: 40px;
-        padding-left: 4rem;
+        height: 68px;
     }
 }
 
 .email {
     display: block;
     width: 50%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    @include handleText;
 }
 
 .icon {
@@ -77,12 +75,13 @@
 
 .btn-wrapper {
     display: flex;
+    padding-left: 16px;
 }
 
 .btn {
-    padding: 4px 22px;
+    padding: 8px 22px;
     border-radius: 6px;
-    margin-right: 3rem;
+    margin-right: 10px;
     cursor: pointer;
     color: var(--white);
 }
