15/7/2022 : Xong 4 yêu cầu

--- a/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
+++ b/src/globalComponents/GlobalStyles/GlobalStyles.module.scss
@@ -14,6 +14,9 @@
     --primary-color-sidebar: #00aeff;
     --background-color-content: #e7fbfc;
     --text-color: #161823;
+
+    --border-radius-default: 10px;
+
     --default-header-height: 60px;
     --font-family: 'Montserrat', sans-serif;
 }
