--- a/src/pages/adminPage/components/Sidebar/Menu/Menu.module.scss
+++ b/src/pages/adminPage/components/Sidebar/Menu/Menu.module.scss
@@ -66,7 +66,8 @@
 .active {
     @include defaultTitleStyles;
     opacity: 1;
-    pointer-events: auto;
+    pointer-events: none;
+    opacity: 0.8;
 }
 
 .active-icon {
