--- a/src/pages/adminPage/pages/Home/Body/Body.module.scss
+++ b/src/pages/adminPage/pages/Home/Body/Body.module.scss
@@ -2,5 +2,5 @@
     width: 100%;
     background-color: var(--white);
     margin-top: 30px;
-    border-radius: 10px;
+    border-radius: var(--border-radius-default);
 }
